--- a/MerlionPortal/MerlionPortal-war/web/grns/bidpost.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/bidpost.xhtml
@@ -93,7 +93,7 @@
                 <c:if test="#{biddingManagedBean.serviceType eq 4}">
                     <p:panel id="basicInfo4" header="Service Information" style="margin-bottom:20px">
                         <h:panelGrid columns="2" cellpadding="10">
-                            <p>Service Type : </p><h:outputText value="Warehouse Service"/>
+                            <p>Service Type : </p><h:outputText value="Warehouse Space Service"/>
                             <p>Company Name: </p><h:outputText value="#{biddingManagedBean.mypost.systemUser.companycompanyId.name}"/>
                             <p>Warehouse Id : </p><h:outputText value="#{biddingManagedBean.mypost.warehouseId}"/>
                             <p>Warehouse Name : </p><h:outputText value="#{biddingManagedBean.warehouseName}"/>
