--- a/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/transportationservicefulfillmentcheck.xhtml
@@ -37,16 +37,16 @@
                         <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
                         <p:menuitem value="View All Locations" url="viewalllocation.xhtml"/>
                     </p:submenu>
-                    <p:submenu label="Transportation Asset" >
+                    <p:submenu label="Transportation Asset Management" >
                         <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
-                        <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
+                        <p:menuitem value="Location Dashboard" url="viewalltasset.xhtml" />
                     </p:submenu>
-                    <p:submenu label="Asset Schedule" >
-                        <p:menuitem value="Add A Asset Schedule" url="addnewtassetschedule.xhtml" />
-                        <p:menuitem value="View All Schedule" url="viewalltassetschedule.xhtml" />
+                    <p:submenu label="Asset Dispatching" >
+                        <p:menuitem value="Dispatch a Asset" url="addnewtassetschedule.xhtml" />
+                        <p:menuitem value="View Current Tasks" url="viewalltassetschedule.xhtml" />
                     </p:submenu>
 
-                    <p:submenu label="Maintenance" >
+                    <p:submenu label="Asset Maintenance" >
                         <p:menuitem value="Create Maintenance" url="addnewmaintenancelog.xhtml"  />
                         <p:menuitem value="View All Maintenance" url="viewallmaintenancelog.xhtml" />
                     </p:submenu>
