Updated page schedule

--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtassetschedule.xhtml
@@ -168,9 +168,9 @@
 
                             </p:column>
                         </p:row>  
-                    </p:panelGrid>
+                    </p:panelGrid><br></br>
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Transportation Schedule" update="form" action="#{tAssetScheduleManagerBean.createTassetSchedule}" ajax="true" />
+                    <p:commandButton id="btn" value="Dispatch Selected Asset" update="form" action="#{tAssetScheduleManagerBean.createTassetSchedule}" ajax="true" />
                 </p:panel>
 
             </h:form>
