--- a/MerlionPortal/MerlionPortal-war/web/grns/viewmybidinfo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/grns/viewmybidinfo.xhtml
@@ -76,7 +76,7 @@
                     <br></br>
                 </c:if>
                 
-                <c:if test="#{biddingManagedBean.serviceType==3}">
+                <c:if test="#{updateMyBidManagedBean.serviceType==3}">
                     <p:panel id="basicInfo3" header="Service Information" style="margin-bottom:20px">
                         <h:panelGrid columns="2" cellpadding="10">
                             <p>Service Type : </p><h:outputText value="Transportation Space Service"/>
@@ -90,7 +90,7 @@
                     <br></br>                    
                 </c:if>
                 
-                <c:if test="#{biddingManagedBean.serviceType==4}">
+                <c:if test="#{updateMyBidManagedBean.serviceType==4}">
                     <p:panel id="basicInfo4" header="Service Information" style="margin-bottom:20px">
                         <h:panelGrid columns="2" cellpadding="10">
                             <p>Service Type : </p><h:outputText value="Warehouse Service"/>
