delete unnecessary POs -Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -59,7 +59,7 @@
                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                 rowsPerPageTemplate="2,6,16" >
                         <f:facet name="header">
-                            Material Requirement Planning for Product ID: <h:outputText value="#{mrp.mrpList.productId}" /> 
+                            Material Requirement Planning
                         </f:facet>
                         <p:panel>
                             <p:panelGrid style="margin-top:20px">
